--- a/index.html
+++ b/index.html
@@ -29,10 +29,8 @@
       <main id="projects"> 
         <div class="recipe a">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-1.png" />
-          <h2>Chocolate Mousse</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">20 mins</p>
-          <p class="description">This dish is very flavorful and chocolaty. A must have for anyone with a sweet tooth. </a></p>            
+          <h2>The Downfall of Video Games</h2>
+          <p class="description"> A description of why video games aren't as fun as they used to be.</a></p>            
         </div>
         <div class="recipe b">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
