--- a/index.html
+++ b/index.html
@@ -27,35 +27,33 @@
       </header>
 
       <main id="projects"> 
-        <div class="recipe a">
+        <div class="blog post">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-1.png" />
           <h2>The Downfall of Video Games</h2>
           <p class="description"> A description of why video games aren't as fun as they used to be.</a></p>            
         </div>
-        <div class="recipe b">
+        <div class="podcast">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
-          <h2>SMOKED LAMB WITH RICE</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">120 mins</p>
+          <h2>Tips on Securing an Internship</h2>
           <p class="description">
-            Want to feel like your favorite relative came over and made you dinner? This comfort meal of smoked lamb and rice will quickly become a weekend favorite!
+            Essential advice on how to obtain an internship in today's competitive environment
           </p>
         </div>
-        <div class="recipe c">
+        <div class="video">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-5.png" />
-          <h2>GOAT CHEESE SALAD</h2>
+          <h2>Video Project</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">25 mins</p>
           <p class="description">
-            In addition to the full flavor of goat cheese, this salad includes kale, avocado, and farro to balance it out.</p>
+            Placeholder for video project description</p>
         </div>
-        <div class="recipe d">
+        <div class="robotics club">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-4.png" />
-          <h2>CHICKEN SANDWICH</h2>
+          <h2>RoboGrinder</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">45 mins</p>
           <p class="description">
-            We've packed a lot into this one - shredded cabbage, carmalized onions, deep-fried chicken, chipotle mayo, half-sour pickles, and a toasted sesame bun will leave you thoroughly satisfied!</p>
+            The Virginia Tech robotics design team that competes in the annual DJI robotics competition</p>
         </div>
         <div class="recipe e">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-3.png" />
