--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
         <div class="blog post">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-1.png" />
           <h2>The Downfall of Video Games</h2>
-          <p class="description"> A description of why video games aren't as fun as they used to be.</a></p>            
+          <p class="description"> A description of why video games aren't as fun as they used to be. The truth lies in these <a href="https://medium.com/@chriskildea52/the-downfall-of-video-games-da4b9784f62e"> words.</a></p>            
         </div>
         <div class="podcast">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
           <h2>Tips on Securing an Internship</h2>
           <p class="description">
-            Essential advice on how to obtain an internship in today's competitive environment
+            Essential advice on how to obtain an internship in today's competitive environment. <a href="https://soundcloud.com/syam-mullapudi-849501677/tips-on-securing-an-internship"> Listen closely.</a> 
           </p>
         </div>
         <div class="video">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-5.png" />
           <h2>Video Project</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
+          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" /> 
           <p class="mins">25 mins</p>
           <p class="description">
             Placeholder for video project description</p>
@@ -53,7 +53,7 @@
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">45 mins</p>
           <p class="description">
-            The Virginia Tech robotics design team that competes in the annual DJI robotics competition</p>
+            The <a href="https://www.robogrinder.com/">Virginia Tech Robotics desgin team</a> team that competes in the annual DJI robotics competition. </p>
         </div>
         <div class="recipe e">
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-3.png" />
