--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 
       <main id="projects"> 
         <div class="blog post">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-1.png" />
+          <img src="css/images/blogpost-controller.jpg" alt="A person dropping a controller"/>
           <h2>The Downfall of Video Games</h2>
           <p class="description"> A description of why video games aren't as fun as they used to be. The truth lies in these <a href="https://medium.com/@chriskildea52/the-downfall-of-video-games-da4b9784f62e"> words.</a></p>            
         </div>
         <div class="podcast">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-2.png" />
+          <img src="css/images/podcast-microphone.jpg" alt="A professional microphone setup" />
           <h2>Tips on Securing an Internship</h2>
           <p class="description">
             Essential advice on how to obtain an internship in today's competitive environment. <a href="https://soundcloud.com/syam-mullapudi-849501677/tips-on-securing-an-internship"> Listen closely.</a> 
           </p>
         </div>
         <div class="video">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-5.png" />
+          <img src="css/images/video-3dmodeling.jpg" alt="A person 3D modeling a building" />
           <h2>Video Project</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" /> 
           <p class="mins">25 mins</p>
@@ -49,7 +49,7 @@
             Placeholder for video project description</p>
         </div>
         <div class="robotics club">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-4.png" />
+          <img src="css/images/resource-robothand.jpg" alt="A person touching a virtual hand emerging from their laptop"/>
           <h2>RoboGrinder</h2>
           <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
           <p class="mins">45 mins</p>
