Cleaned up code

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Christopher Kildea</title>
-    <link rel="stylesheet" type="text/css" href="reset.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -28,66 +27,33 @@
       </header>
 
       <main id="projects"> 
-        <div class="blog post">
+
+        <div class="project">
           <img src="css/images/blogpost-controller.jpg" alt="A person dropping a controller"/>
           <h2>The Downfall of Video Games</h2>
           <p class="description"> A description of why video games aren't as fun as they used to be. The truth lies in these <a href="https://medium.com/@chriskildea52/the-downfall-of-video-games-da4b9784f62e"> words.</a></p>            
         </div>
-        <div class="podcast">
+        <div class="project">
           <img src="css/images/podcast-microphone.jpg" alt="A professional microphone setup" />
           <h2>Tips on Securing an Internship</h2>
           <p class="description">
             Essential advice on how to obtain an internship in today's competitive environment. <a href="https://soundcloud.com/syam-mullapudi-849501677/tips-on-securing-an-internship"> Listen closely.</a> 
           </p>
         </div>
-        <div class="video">
+        <div class="project">
           <img src="css/images/video-3dmodeling.jpg" alt="A person 3D modeling a building" />
           <h2>Video Project</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" /> 
-          <p class="mins">25 mins</p>
           <p class="description">
             Placeholder for video project description</p>
         </div>
-        <div class="robotics club">
+        <div class="project">
           <img src="css/images/resource-robothand.jpg" alt="A person touching a virtual hand emerging from their laptop"/>
           <h2>RoboGrinder</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">45 mins</p>
           <p class="description">
             The <a href="https://www.robogrinder.com/">Virginia Tech Robotics desgin team</a> team that competes in the annual DJI robotics competition. </p>
         </div>
-        <div class="recipe e">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-3.png" />
-          <h2>SWEET CHURROS</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">90 mins</p>
-          <p class="description">
-            Making this classic summer treat at home will remind you of a childhood spent in the park.</p>
-        </div>
-        <div class="recipe f">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-6.png" />
-          <h2>BERRY PARFAIT</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">10 mins</p>
-          <p class="description">
-            This low-calorie, vitamin-packed parfait is great for breakfast, dessert, or post-workout!</p>
-        </div>
-        <div class="recipe e">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-3.png" />
-          <h2>SWEET CHURROS</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">90 mins</p>
-          <p class="description">
-            Making this classic summer treat at home will remind you of a childhood spent in the park.</p>
-        </div>
-        <div class="recipe f">
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/image-6.png" />
-          <h2>BERRY PARFAIT</h2>
-          <img src="https://content.codecademy.com/courses/learn-css-grid/lesson-ii/time.svg" class="time" />
-          <p class="mins">10 mins</p>
-          <p class="description">
-            This low-calorie, vitamin-packed parfait is great for breakfast, dessert, or post-workout!</p>
-        </div>
+
+
       </main>
 
       <footer>
