added youtube link

--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
         </div>
         <div class="project">
           <img src="css/images/video-3dmodeling.jpg" alt="A person 3D modeling a building" />
-          <h2>Video Project</h2>
+          <h2>How to Easily Import Multiple Meshes Into Roblox Studio From Blender</h2>
           <p class="description">
-            Placeholder for video project description</p>
+            Better the quality of your game by learning how to easily <a href="https://www.youtube.com/watch?v=T3YJYAj39gE&t=38s">import multiple meshes from Blender into Roblox Studio.</a></p>
+            
         </div>
         <div class="project">
           <img src="css/images/resource-robothand.jpg" alt="A person touching a virtual hand emerging from their laptop"/>
