--- a/index.html
+++ b/index.html
@@ -31,27 +31,27 @@
         <div class="project">
           <img src="css/images/blogpost-controller.jpg" alt="A person dropping a controller"/>
           <h2>The Downfall of Video Games</h2>
-          <p class="description"> A description of why video games aren't as fun as they used to be. The truth lies in these <a href="https://medium.com/@chriskildea52/the-downfall-of-video-games-da4b9784f62e"> words.</a></p>            
+          <p class="description"> A description of why video games aren't as fun as they used to be. The truth lies in these <a href="https://medium.com/@chriskildea52/the-downfall-of-video-games-da4b9784f62e"target="_blank"> words.</a></p>            
         </div>
         <div class="project">
           <img src="css/images/podcast-microphone.jpg" alt="A professional microphone setup" />
           <h2>Tips on Securing an Internship</h2>
           <p class="description">
-            Essential advice on how to obtain an internship in today's competitive environment. <a href="https://soundcloud.com/syam-mullapudi-849501677/tips-on-securing-an-internship"> Listen closely.</a> 
+            Essential advice on how to obtain an internship in today's competitive environment. <a href="https://soundcloud.com/syam-mullapudi-849501677/tips-on-securing-an-internship"target="_blank"> Listen closely.</a> 
           </p>
         </div>
         <div class="project">
           <img src="css/images/video-3dmodeling.jpg" alt="A person 3D modeling a building" />
           <h2>How to Easily Import Multiple Meshes Into Roblox Studio From Blender</h2>
           <p class="description">
-            Better the quality of your game by learning how to easily <a href="https://www.youtube.com/watch?v=T3YJYAj39gE&t=38s">import multiple meshes from Blender into Roblox Studio.</a></p>
+            Better the quality of your game by learning how to easily <a href="https://www.youtube.com/watch?v=T3YJYAj39gE&t"target="_blank">import multiple meshes from Blender into Roblox Studio.</a></p>
             
         </div>
         <div class="project">
           <img src="css/images/resource-robothand.jpg" alt="A person touching a virtual hand emerging from their laptop"/>
           <h2>RoboGrinder</h2>
           <p class="description">
-            The <a href="https://www.robogrinder.com/">Virginia Tech Robotics desgin team</a> team that competes in the annual DJI robotics competition. </p>
+            The <a href="https://www.robogrinder.com/"target="_blank">Virginia Tech Robotics desgin team</a> team that competes in the annual DJI robotics competition. </p>
         </div>
 
 
