--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header>
         <div class="wrapper">
           <h1>Christopher Kildea</h1>
-            <p class="bio"> I'm a CS major and I like robotics.
+            <p class="bio"> Hey! I'm a Computer Science major with an interest in automation. This site showcases my interests and some different digital media projects I have been working on. Enjoy!
             </p>
           <div class="buttonBox">
             <a class="myButton" href="#projects">Go</a>
